syntax = "proto3";


import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "messages.proto";

package administration;

option java_package = "ar.edu.itba.pod.grpc.administration";
option java_multiple_files = true;

service AdministrationService {
  rpc AddRoom(google.protobuf.Empty) returns (google.protobuf.UInt32Value);
  rpc AddDoctor(DoctorInfo) returns (google.protobuf.Empty);
  rpc SetDoctor(DoctorStatusRequest) returns (DoctorStatusResponse);
  rpc CheckDoctor(google.protobuf.StringValue) returns (DoctorStatusResponse);
}

message DoctorStatusRequest {
  string name = 1;
  DoctorStatus status = 2;
}

message DoctorStatusResponse {
  DoctorInfo doctor = 1;
  DoctorStatus status = 2;
}

